# FEX

./: .gitmodules  CMakeLists.txt
.github/workflows/: ccpp.yml
Data/binfmts/: FEX-x86.in  FEX-x86_64.in
FEXCore/Source/: CMakeLists.txt
FEXCore/Source/Interface/Config/: Config.json.in
FEXCore/Source/Interface/Context/: Context.h
FEXCore/Source/Interface/Core/: CPUBackend.cpp  CPUBackend.h  CodeCache.cpp  Core.cpp  OpcodeDispatcher.cpp  OpcodeDispatcher.h
FEXCore/Source/Interface/Core/JIT/: JIT.cpp
FEXCore/Source/Interface/IR/: IR.json  PassManager.cpp  Passes.h
FEXCore/Source/Utils/: Allocator.cpp  AllocatorHooks.cpp
FEXCore/Source/Utils/Allocator/: 64BitAllocator.cpp
FEXCore/include/FEXCore/Core/: Context.h
FEXCore/include/FEXCore/Utils/: AllocatorDefines.h  AllocatorHooks.h
Scripts/: Execute_FEX.py  FindFEXCoreExports.py  Upload_LoadCI.py
Source/Common/: ArenaAllocator.cpp  ArenaAllocator.h  ArgumentLoader.cpp  CMakeLists.txt  Config.cpp  Config.h  FEXServerClient.cpp  FEXServerClient.h
Source/Tests/: CMakeLists.txt  ELFCodeLoader2.h  ELFLoader.cpp  FEXLoader.cpp  HarnessHelpers.h  TestHarnessRunner.cpp  VDSO_Generator.cpp  VDSO_Generator.h
Source/Tests/LinuxSyscalls/: CMakeLists.txt  FileManagement.cpp  LinuxAllocator.cpp  SignalDelegator.cpp  SignalDelegator.h  Syscalls.cpp  Syscalls.h  SyscallsSMCTracking.cpp
Source/Tests/LinuxSyscalls/AndroidHandlers/: FS.cpp  Handlers.h  Info.cpp  Key.cpp  Msg.cpp  Semaphore.cpp  Thread.cpp  Time.cpp
Source/Tests/LinuxSyscalls/AndroidHandlers/x32/: FS.cpp  Msg.cpp  Semaphore.cpp  Thread.cpp  Time.cpp
Source/Tests/LinuxSyscalls/AndroidHandlers/x64/: Msg.cpp  Semaphore.cpp  Thread.cpp
Source/Tests/LinuxSyscalls/Syscalls/: SHM.cpp  Semaphore.cpp
Source/Tests/LinuxSyscalls/x32/: FD.cpp  Memory.cpp  Semaphore.cpp  Socket.cpp  Syscalls.cpp  Syscalls.h  Thread.cpp  Time.cpp
Source/Tests/LinuxSyscalls/x64/: FD.cpp  Memory.cpp  Syscalls.cpp  Syscalls.h  Thread.cpp  Types.h
Source/Tools/FEXLoader/: CMakeLists.txt  ELFCodeLoader.h  FEXLoader.cpp
Source/Tools/FEXLoader/LinuxSyscalls/: FileManagement.cpp  GdbServer.cpp  Syscalls.cpp
Source/Tools/FEXServer/: ProcessPipe.cpp
Source/Tools/LinuxEmulation/: CMakeLists.txt
Source/Tools/LinuxEmulation/LinuxSyscalls/: FileManagement.cpp  SeccompEmulator.cpp  SignalDelegator.cpp  SignalDelegator.h  Syscalls.cpp  Syscalls.h  SyscallsSMCTracking.cpp
Source/Tools/LinuxEmulation/LinuxSyscalls/SignalDelegator/: GuestFramesManagement.cpp
Source/Tools/LinuxEmulation/LinuxSyscalls/Syscalls/: Thread.cpp
Source/Tools/LinuxEmulation/Unwind/: Unwind_accessors.inl  Unwind_x86_64.cpp
Source/Tools/TestHarnessRunner/: CMakeLists.txt
ThunkLibs/Generators/: libEGL_32.py  libGLESv2.py  libGLESv2_32.py  libThunkLib.py  libX11_32.py
ThunkLibs/GuestLibs/: CMakeLists.txt
ThunkLibs/GuestLibs_x32/: CMakeLists.txt
ThunkLibs/HostLibs/: CMakeLists.txt
ThunkLibs/HostLibs_x32/: CMakeLists.txt
ThunkLibs/libGLESv2/: Defines.h  libGLESv2_Guest.cpp  libGLESv2_Host.cpp
ThunkLibs/libThunkLib/: libThunkLib_Guest.cpp  libThunkLib_Host.cpp
ThunkLibs/libX11/: Defines.h
ThunkLibs/libcuda/: cuda_defines.h  libcuda_Guest.cpp  libcuda_Host.cpp  libcuda_interface.cpp
dev/bench/: data.js
dev/bench/Ryan-TR2/: data.js
unittests/: CMakeLists.txt
unittests/ASM/: CMakeLists.txt  Known_Failures
unittests/ASM/FEX_bugs/: x87_fprem.asm
unittests/FEXCore_api/: APITest.cpp  CMakeLists.txt  LoaderAPI.h  Test.cpp
unittests/LoadCI/: CMakeLists.txt
unittests/gvisor-tests/: Disabled_Tests  Known_Failures
